# tachyaudio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml  wheels.yml
docs/: architecture.md  python-support.md  release.md
examples/: capture_level.py  play_tone.py  play_wav.py
src/tachyaudio/: __init__.py  _backend.py  _device.py  _errors.py  _native.c  _native_backend.py  _stream.py
tests/: test_public_api.py
